fixed window title not showing color

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ window#waybar.chromium {
 #window,
 #workspaces {
     margin: 0 4px;
+    color: whitesmoke;
 }
 
 #workspaces button {
@@ -98,6 +99,8 @@ window#waybar.chromium {
 #mode,
 #bluetooth,
 #custom-power,
+#mpris,
+#hyprland-window,
 #power-profiles-daemon {
     padding: 0 10px;
     color: #ffffff;
